tests/golden/parse_errors/match_guard_missing_condition.err
Parse error at 4:23: expected expression
    Result.Ok(value) if => value,
                        ^
Parse error at 6:2: expected expression
  };
   ^
